--- a/repositorioejemplo/res/layout/activity_main.xml
+++ b/repositorioejemplo/res/layout/activity_main.xml
@@ -1,8 +1,48 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.kradac.repositorioejemplo.MainActivity"
-    tools:ignore="MergeRootFrame" />
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity" >
 
+    
+	<fragment
+	    android:id="@+id/map"
+	    android:name="com.google.android.gms.maps.MapFragment"
+	    android:layout_below="@+id/btnSurrey"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+		/>
+
+	<Button
+	    android:id="@+id/btnCity"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignParentLeft="true"
+	    android:layout_alignParentTop="true"
+	    android:onClick="onClick_City"
+	    android:text="Ciudad" />
+
+	<Button
+	    android:id="@+id/btnBurnaby"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_above="@+id/map"
+	    android:layout_toRightOf="@+id/btnCity"
+	    android:onClick="onClick_Burnaby"
+	    android:text="Burnaby" />
+
+	<Button
+	    android:id="@+id/btnSurrey"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignBaseline="@+id/btnCity"
+	    android:layout_alignBottom="@+id/btnCity"
+	    android:layout_toRightOf="@+id/btnBurnaby"
+	    android:onClick="onClick_Surrey"
+	    android:text="Ubicacion" />
+
+</RelativeLayout>
